Closed Bug 131233 Opened 23 years ago Closed 23 years ago

rounded borders and backgrounds not working for tall elements

Categories

(Core :: CSS Parsing and Computation, defect, P5)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: tam, Assigned: dbaron)

References

()

Details

Attachments

(3 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i586; en-US; rv:0.9.8) Gecko/20020214 BuildID: 0.9.8 Hi, the bug is: When you view this page in full screen, there is noch problem, in some other windowsizes there is. You can see the border and the blue background ABOVE the text, but the <div> tag is around it.The IE for instance displays it correctly. Reproducible: Always Steps to Reproduce: 1. Open Page in Mozilla 2. maximize the window 3. resize the window to a smaller one 4. if it does not show the error resize again because it seems to be a special window size. Actual Results: You can see the border and the blue background ABOVE the text Expected Results: Show the border whitch is above the text, just AROUND the text as done correctly in some resolution. at 1152x864 in full screen mode no error occures. Code example: <div class="rechts"> <?PHP include ("$topic.php"); ?> </div> in the $topic included file it is: <?PHP include ("bofh/$story.inc"); ?> the sec parameter is just for the menu ob the left.
Priority: -- → P5
Target Milestone: --- → mozilla0.9.8
I suspect this may be a duplicate of my ConditionRect bug, except that the height seems a little too small for that to be the issue. It seems like there's an issue with the rounded-border background drawing code as well. Although this could be some other issue with the rounded-border code. FWIW, the window widths where I see the problem are very narrow ones.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Don't set the target milestone, please. That's for the bug owner only. (Also, setting a target in the past might lead to a bug being ignored.)
Target Milestone: mozilla0.9.8 → ---
There were some PRInt16 values storing twip-valued numbers. Fix to be attached.
Summary: <div> tag with .css file & php include shown wrong at some window size → rounded borders and backgrounds not working for tall elements
They might have been pixel valued, actually. But either way -- we should be able to handle rounded borders on documents taller than 32767 pixels.
Comment on attachment 74390 [details] [diff] [review] patch sr=attinasi
Attachment #74390 - Flags: superreview+
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
Comment on attachment 74390 [details] [diff] [review] patch r=dcone
Attachment #74390 - Flags: review+
Comment on attachment 74390 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #74390 - Flags: approval+
*** Bug 131413 has been marked as a duplicate of this bug. ***
dbaron: the testcases show this problem also for some extreme non cases of non-rounded borders. Does your patch fix that too?
Extreme cases of non-rounded borders would be covered under my bug with ConditionRect in the summary. (I'm assuming you're talking about the bug that, when you just hit the criterion for causing it, will show up at the ends of the page but not the middle.)
Fix checked in 2002-03-16 07:25 PST.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
dbaron: No, I'm referring to the effect seen on attachment 74414 [details] when the width of the window is just enough for one word. The effect seen is the same as with the border-radius case: the border goes up instead of down.
Yes, but if you scroll down to the middle of the document, you'll see the border appear again. (You might have to fiddle with the font size, but that's what I see.) And that's how I know it's a ConditionRect problem (bug 115526).
So it does. Cool. VERIFIED.
Status: RESOLVED → VERIFIED
*** Bug 150552 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: