Fix drawing of rounded borders and backgrounds on large elements by using PRInt32 instead of PRInt16.  b=131233  r=dcone  sr=attinasi  a=asa